@startuml
'https://plantuml.com/class-diagram


enum TokenType {
    ETH, ERC20,
    ERC721, ERC1155
}

class TokenContract {
    tokenType
    contractAddress
    name
}

class TokenData {
    tokenContract
    tokenId
    owner
    quantity
}


class OrderPart {
    token: TokenData
    quantity: bigint
    --
    startTime: number
    endTime: number
}



OrderPart -* TokenData
TokenData -* TokenContract
TokenContract -* TokenType


class Offer {
    left: OrderPart
    right: OrderPart
    --
    nonce
    signature
    --
    toCallData()
    toMessage()
}



class Bid {
    left: OrderPart
    right: OrderPart
    --
    auction: Auction
    --
    nonce
    signature
}


class Auction {
    tokenData: OrderPart
    --
    minPrice
}


Bid --* Auction : left ?
Bid --* OrderPart : right

Offer --* OrderPart : left, right

Bid -|> Offer
Auction -* OrderPart

package "SmartContract" <<Cloud>> {
circle " " as acceptOffer
Offer -> acceptOffer: "output from `toCallData()` sends to              \n acceptOffer(offer)"
}

@enduml
